<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_standard">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_settings"
        android:textSize="@dimen/text_size_title_large"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin_large"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications"
        android:textSize="@dimen/text_size_body"
        android:paddingVertical="@dimen/padding_small"
        android:checked="true" />


    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_dark_theme"
        android:textSize="@dimen/text_size_body"
        android:paddingVertical="@dimen/padding_small" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD"
        android:layout_marginVertical="@dimen/margin_standard" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_language"
        android:textSize="@dimen/text_size_body"
        android:paddingVertical="@dimen/padding_small"
        android:drawableEnd="@android:drawable/ic_menu_more" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/settings_save" />

</LinearLayout>