<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_categories">

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.lab4.CategoryFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_category">
        <action
            android:id="@+id/action_categories_to_list"
            app:destination="@id/nav_places" />
    </fragment>

    <fragment
        android:id="@+id/nav_places"
        android:name="com.example.lab4.PlaceListFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_place_list">
        <action
            android:id="@+id/action_list_to_detail"
            app:destination="@id/nav_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="com.example.lab4.PlaceDetailFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_place_detail" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.lab4.SettingsFragment"
        android:label="@string/nav_settings" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.lab4.AboutFragment"
        android:label="@string/nav_about" />

</navigation>